--- a/Project3/src/sample/Layout.fxml
+++ b/Project3/src/sample/Layout.fxml
@@ -4,12 +4,10 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -20,7 +18,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="363.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <top>
       <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
         <tabs>
@@ -140,20 +138,21 @@
                         <VBox prefHeight="64.0" prefWidth="600.0">
                            <children>
                               <Label prefHeight="17.0" prefWidth="164.0" text="Select From Command Menu" />
-                              <MenuBar>
-                                <menus>
-                                  <Menu mnemonicParsing="false" text="File">
-                                    <items>
-                                      <MenuItem mnemonicParsing="false" text="Close" />
-                                    </items>
-                                  </Menu>
-                                  <Menu mnemonicParsing="false" text="Edit">
-                                    <items>
-                                      <MenuItem mnemonicParsing="false" text="Delete" />
-                                    </items>
-                                  </Menu>
-                                </menus>
-                              </MenuBar>
+                              <GridPane>
+                                <columnConstraints>
+                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <Button fx:id="print" mnemonicParsing="false" onAction="#Print" text="Print" />
+                                    <Button fx:id="printByLastName" mnemonicParsing="false" onAction="#PrintByLastName" text="Print By Last Name" GridPane.columnIndex="1" />
+                                    <Button fx:id="printByOpenDate" mnemonicParsing="false" onAction="#PrintByOpenDate" text="Print By Open Date" GridPane.columnIndex="2" />
+                                 </children>
+                              </GridPane>
                            </children>
                         </VBox>
                      </children>
@@ -163,4 +162,7 @@
         </tabs>
       </TabPane>
    </top>
+   <bottom>
+      <TextArea fx:id="resultArea" prefHeight="144.0" prefWidth="700.0" BorderPane.alignment="CENTER" />
+   </bottom>
 </BorderPane>
