--- a/Project3/src/sample/Layout.fxml
+++ b/Project3/src/sample/Layout.fxml
@@ -125,6 +125,7 @@
                               <RadioButton fx:id="dw_MoneyMarket" mnemonicParsing="false" text="Money Market" toggleGroup="$accountManage" GridPane.columnIndex="3" />
                               <Button fx:id="deposit" mnemonicParsing="false" onAction="#deposit" prefHeight="27.0" prefWidth="150.0" text="Deposit" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                               <Button fx:id="withdraw" mnemonicParsing="false" onAction="#withdraw" prefHeight="27.0" prefWidth="152.0" text="Withdraw" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+                              <Button fx:id="oca_clear1" mnemonicParsing="false" onAction="#clear" text="Clear" GridPane.columnIndex="3" GridPane.rowIndex="1" />
                            </children>
                         </GridPane>
                      </children>
@@ -138,7 +139,7 @@
                         <VBox prefHeight="64.0" prefWidth="600.0">
                            <children>
                               <Label prefHeight="17.0" prefWidth="164.0" text="Select From Command Menu" />
-                              <GridPane>
+                              <GridPane minHeight="-Infinity" prefHeight="109.0" prefWidth="600.0">
                                 <columnConstraints>
                                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -146,12 +147,21 @@
                                 </columnConstraints>
                                 <rowConstraints>
                                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                 </rowConstraints>
                                  <children>
+                                    <Button fx:id="oca_clear2" mnemonicParsing="false" onAction="#clear" text="Clear" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                       <GridPane.margin>
+                                          <Insets bottom="2.0" />
+                                       </GridPane.margin>
+                                    </Button>
                                     <Button fx:id="print" mnemonicParsing="false" onAction="#resP" text="Print" />
                                     <Button fx:id="printByLastName" mnemonicParsing="false" onAction="#resPName" text="Print By Last Name" GridPane.columnIndex="1" />
                                     <Button fx:id="printByOpenDate" mnemonicParsing="false" onAction="#resPDate" text="Print By Open Date" GridPane.columnIndex="2" />
                                  </children>
+                                 <VBox.margin>
+                                    <Insets bottom="2.0" />
+                                 </VBox.margin>
                               </GridPane>
                            </children>
                         </VBox>
