--- a/Project3/src/sample/Layout.fxml
+++ b/Project3/src/sample/Layout.fxml
@@ -4,6 +4,9 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
@@ -134,35 +137,27 @@
           </Tab>
             <Tab text="Account Database">
                <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="92.0" prefWidth="600.0">
                      <children>
                         <VBox prefHeight="64.0" prefWidth="600.0">
                            <children>
-                              <Label prefHeight="17.0" prefWidth="164.0" text="Select From Command Menu" />
-                              <GridPane minHeight="-Infinity" prefHeight="109.0" prefWidth="600.0">
-                                <columnConstraints>
-                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                </columnConstraints>
-                                <rowConstraints>
-                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                </rowConstraints>
-                                 <children>
-                                    <Button fx:id="oca_clear2" mnemonicParsing="false" onAction="#clear" text="Clear" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                                       <GridPane.margin>
-                                          <Insets bottom="2.0" />
-                                       </GridPane.margin>
-                                    </Button>
-                                    <Button fx:id="print" mnemonicParsing="false" onAction="#resP" text="Print" />
-                                    <Button fx:id="printByLastName" mnemonicParsing="false" onAction="#resPName" text="Print By Last Name" GridPane.columnIndex="1" />
-                                    <Button fx:id="printByOpenDate" mnemonicParsing="false" onAction="#resPDate" text="Print By Open Date" GridPane.columnIndex="2" />
-                                 </children>
-                                 <VBox.margin>
-                                    <Insets bottom="2.0" />
-                                 </VBox.margin>
-                              </GridPane>
+                              <MenuBar>
+                                <menus>
+                                  <Menu mnemonicParsing="false" text="File">
+                                    <items>
+                                      <MenuItem mnemonicParsing="false" text="Import" />
+                                          <MenuItem mnemonicParsing="false" text="Export" />
+                                    </items>
+                                  </Menu>
+                                  <Menu mnemonicParsing="false" text="Print">
+                                    <items>
+                                      <MenuItem fx:id="print" mnemonicParsing="false" onAction="#resP" text="Print" />
+                                          <MenuItem fx:id="printByLastName" mnemonicParsing="false" onAction="#resPName" text="Print by Last Name" />
+                                          <MenuItem fx:id="printByOpenDate" mnemonicParsing="false" onAction="#resPDate" text="Print by Date Opened" />
+                                    </items>
+                                  </Menu>
+                                </menus>
+                              </MenuBar>
                            </children>
                         </VBox>
                      </children>
@@ -172,7 +167,7 @@
         </tabs>
       </TabPane>
    </top>
-   <bottom>
-      <TextArea fx:id="resultArea" prefHeight="144.0" prefWidth="700.0" BorderPane.alignment="CENTER" />
-   </bottom>
+   <left>
+      <TextArea fx:id="resultArea" pickOnBounds="false" prefHeight="0.0" prefWidth="600.0" BorderPane.alignment="CENTER" />
+   </left>
 </BorderPane>
