--- a/Project3/src/sample/Layout.fxml
+++ b/Project3/src/sample/Layout.fxml
@@ -145,8 +145,8 @@
                                 <menus>
                                   <Menu mnemonicParsing="false" text="File">
                                     <items>
-                                      <MenuItem mnemonicParsing="false" text="Import" />
-                                          <MenuItem mnemonicParsing="false" text="Export" />
+                                      <MenuItem mnemonicParsing="false" onAction="#importFile" text="Import" />
+                                          <MenuItem mnemonicParsing="false" onAction="#exportFile" text="Export" />
                                     </items>
                                   </Menu>
                                   <Menu mnemonicParsing="false" text="Print">
