--- a/Project4-Sandwiches/src/SceneA/sceneALayout.fxml
+++ b/Project4-Sandwiches/src/SceneA/sceneALayout.fxml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
-
+<?import javafx.scene.layout.VBox?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SceneA.SceneAController">
    <top>
@@ -13,13 +16,37 @@
          <children>
             <ComboBox fx:id="sandwichType" onAction="#SandwichSelect" prefHeight="32.0" prefWidth="151.0" promptText="Sandwich Type" />
             <ImageView fx:id="image" fitHeight="150.0" fitWidth="176.0" pickOnBounds="true" preserveRatio="true" />
+            <VBox prefHeight="200.0" prefWidth="100.0">
+               <children>
+                  <Label text="Basic Ingredients:" />
+                  <TextArea fx:id="select_basic" prefHeight="200.0" prefWidth="200.0" />
+                  <Label text="Price:" />
+                  <TextArea fx:id="select_price" prefHeight="200.0" prefWidth="200.0" />
+               </children>
+            </VBox>
+            <VBox prefHeight="150.0" prefWidth="269.0">
+               <children>
+                  <TextArea fx:id="select_textArea" prefHeight="200.0" prefWidth="200.0" />
+                  <Button mnemonicParsing="false" onAction="#select_add" text="Add to Shopping Cart" />
+               </children>
+            </VBox>
          </children>
       </HBox>
    </top>
    <left>
-      <ListView fx:id="extraProvided" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label text="Extra Ingredients can select" />
+            <ListView fx:id="extraProvided" onMouseClicked="#addExtra" prefHeight="200.0" prefWidth="200.0" />
+         </children>
+      </VBox>
    </left>
    <center>
-      <ListView prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label text="Extra Ingredients selected" />
+            <ListView fx:id="extraSelected" onMouseClicked="#removeExtra" prefHeight="200.0" prefWidth="200.0" />
+         </children>
+      </VBox>
    </center>
 </BorderPane>
