--- a/Project4-Sandwiches/src/SceneA/sceneALayout.fxml
+++ b/Project4-Sandwiches/src/SceneA/sceneALayout.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -19,34 +20,47 @@
             <VBox prefHeight="200.0" prefWidth="100.0">
                <children>
                   <Label text="Basic Ingredients:" />
-                  <TextArea fx:id="select_basic" minHeight="-Infinity" prefHeight="112.0" prefWidth="68.0" />
+                  <TextArea fx:id="select_basic" minHeight="-Infinity" prefHeight="112.0" prefWidth="101.0" />
                   <Label text="Price:" />
                   <TextArea fx:id="select_price" prefHeight="200.0" prefWidth="200.0" />
                </children>
             </VBox>
             <VBox prefHeight="150.0" prefWidth="269.0">
                <children>
-                  <TextArea fx:id="select_textArea" prefHeight="200.0" prefWidth="200.0" />
+                  <TextArea fx:id="select_textArea" prefHeight="200.0" prefWidth="200.0">
+                     <VBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </VBox.margin></TextArea>
                   <Button mnemonicParsing="false" onAction="#select_add" text="Add to Shopping Cart" />
                </children>
             </VBox>
          </children>
       </HBox>
    </top>
-   <left>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
-         <children>
-            <Label text="Extra Ingredients can select" />
-            <ListView fx:id="extraProvided" onMouseClicked="#addExtra" prefHeight="200.0" prefWidth="200.0" />
-         </children>
-      </VBox>
-   </left>
    <center>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+      <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <Label text="Extra Ingredients selected" />
-            <ListView fx:id="extraSelected" onMouseClicked="#removeExtra" prefHeight="200.0" prefWidth="200.0" />
+            <VBox prefHeight="211.0" prefWidth="330.0">
+               <children>
+                  <Label text="Extra Ingredients can select" />
+                  <ListView fx:id="extraProvided" onMouseClicked="#addExtra" prefHeight="194.0" prefWidth="308.0">
+                     <VBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" />
+                     </VBox.margin>
+                  </ListView>
+               </children>
+            </VBox>
+            <VBox prefHeight="211.0" prefWidth="280.0">
+               <children>
+                  <Label text="Extra Ingredients selected" />
+                  <ListView fx:id="extraSelected" onMouseClicked="#removeExtra" prefHeight="195.0" prefWidth="248.0">
+                     <VBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" />
+                     </VBox.margin>
+                  </ListView>
+               </children>
+            </VBox>
          </children>
-      </VBox>
+      </HBox>
    </center>
 </BorderPane>
