--- a/Project4-Sandwiches/src/SceneB/sceneBLayout.fxml
+++ b/Project4-Sandwiches/src/SceneB/sceneBLayout.fxml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
-
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SceneB.SceneBController">
    <children>
-      <Button layoutX="260.0" layoutY="155.0" mnemonicParsing="false" text="Click Me" />
+      <Button layoutX="14.0" layoutY="302.0" mnemonicParsing="false" onAction="#OD_Copy" text="+ Same Order Line" />
+      <ListView fx:id="OD_ListView" prefHeight="287.0" prefWidth="600.0" />
+      <Button layoutX="167.0" layoutY="302.0" mnemonicParsing="false" onAction="#OD_Remove" text="- Remove Order Line" />
+      <Button layoutX="47.0" layoutY="344.0" mnemonicParsing="false" onAction="#clear" text="Clear Order" />
+      <Button layoutX="205.0" layoutY="344.0" mnemonicParsing="false" onAction="#back" text="Back" />
+      <Button layoutX="518.0" layoutY="344.0" mnemonicParsing="false" onAction="#export" text="Save to File" />
    </children>
 </AnchorPane>
