--- a/Project4-Sandwiches/src/SceneA/sceneALayout.fxml
+++ b/Project4-Sandwiches/src/SceneA/sceneALayout.fxml
@@ -70,7 +70,7 @@
          <children>
             <VBox prefHeight="211.0" prefWidth="330.0">
                <children>
-                  <Label text="Extra Ingredients can select" />
+                  <Label text="Available Extra Ingredients (Click to add)" />
                   <ListView fx:id="extraProvided" onMouseClicked="#addExtra" prefHeight="194.0" prefWidth="308.0">
                      <VBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" />
@@ -80,7 +80,7 @@
             </VBox>
             <VBox prefHeight="211.0" prefWidth="280.0">
                <children>
-                  <Label text="Extra Ingredients selected" />
+                  <Label text="Added Extra ingredients (Click to remove)" />
                   <ListView fx:id="extraSelected" onMouseClicked="#removeExtra" prefHeight="195.0" prefWidth="248.0">
                      <VBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" />
