--- a/Project5-Android/app/src/main/res/layout/activity_main.xml
+++ b/Project5-Android/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,12 +7,15 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
     <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:text="@string/nyc_museum_tickets"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" android:id="@+id/textView" android:textSize="36sp"
+            android:textStyle="bold" android:textAlignment="center" android:textColor="#673AB7"/>
+    <ListView
+            android:layout_width="match_parent"
+            android:layout_height="620dp" tools:layout_editor_absoluteY="59dp" tools:layout_editor_absoluteX="1dp"
+            android:id="@+id/l1"
+            android:layout_below="@id/textView"
+            android:background="#FFFFFF"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
