--- a/Project5-Android/app/src/main/res/layout/activity_second.xml
+++ b/Project5-Android/app/src/main/res/layout/activity_second.xml
@@ -64,4 +64,23 @@
             android:layout_marginEnd="80dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="100dp"
             app:layout_constraintStart_toEndOf="@+id/adult_price" android:layout_marginTop="90dp"
             app:layout_constraintTop_toBottomOf="@+id/museum_image"/>
+    <TextView
+            android:text="@string/total_price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/totalPriceText"
+            app:layout_constraintTop_toBottomOf="@+id/salesTaxText" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="80dp" android:layout_marginTop="10dp"/>
+    <TextView
+            android:text="@string/ticket_price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/ticketPriceText"
+            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/student_price"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="80dp"
+    />
+    <TextView
+            android:text="@string/sales_tax"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/salesTaxText"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="80dp"
+            android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/ticketPriceText"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
