--- a/Project5-Android/app/src/main/res/layout/activity_second.xml
+++ b/Project5-Android/app/src/main/res/layout/activity_second.xml
@@ -20,7 +20,7 @@
             android:layout_height="383dp" app:srcCompat="@drawable/museum_met_breuer"
             android:id="@+id/museum_image" android:contentDescription="@string/todo"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="65dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="80dp" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
     <TextView
             android:text="@string/adult"
@@ -29,7 +29,7 @@
             android:layout_marginTop="30dp"
             app:layout_constraintTop_toBottomOf="@+id/museum_image" android:layout_marginEnd="270dp"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="80dp" app:layout_constraintHorizontal_bias="0.0"/>
+            android:layout_marginStart="80dp" app:layout_constraintHorizontal_bias="0.0" android:textSize="14sp"/>
     <TextView
             android:text="@string/senior"
             android:layout_width="wrap_content"
